<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_enable_notifications_sound"
        android:summary="@string/enable_notifications_sound_description"
        android:title="@string/enable_notifications_sound_header" />

    <RingtonePreference
        android:key="@string/key_notification_ringtone"
        android:title="@string/notification_ringtone_header"
        android:defaultValue="@string/notification_ringtone_default"
        android:dialogTitle="Notification Ringtone"
        android:dialogMessage="Choose Ringtone for Notification"
        android:dependency="enable_notifications_sound"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_enable_vibration"
        android:summary="@string/enable_vibration_description"
        android:title="@string/enable_vibration_header" />

</PreferenceScreen>
