<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<CheckBoxPreference
        android:key="perform_sync"
        android:summary="Enable or disable data sync"
        android:title="Enable Auto Sync"
        android:defaultValue="true"/>

    <ListPreference
        android:key="sync_interval"
        android:title="Sync interval"
        android:summary="Define how often sync will be performed"
        android:defaultValue="1000"
        android:entries="@array/updateInterval"
        android:entryValues="@array/updateIntervalValues"
        android:dependency="perform_sync"/>-->

    <Preference
        android:key="@string/key_send_us_feedback"
        android:title="@string/feedback_header"
        android:summary="@string/feedback_description">
    </Preference>

    <Preference
        android:key="@string/key_rate_app"
        android:title="@string/rate_us_header">
    </Preference>

    <Preference
        android:key="@string/key_about_me"
        android:title="@string/about_me_header">
    </Preference>

</PreferenceScreen>
